more formatting changes in css, fixing center alignment of all items on page.

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -52,7 +52,7 @@ body {
           align-content: center;
           div.row#resultsArea {
             height: 450px;
-            width: 450px;
+            width: 100%;
             align-self: center;
             canvas#resultsChart {
               position: relative; 
